--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/core": "^7.21.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.5",
+    "body-parser": "^1.20.2",
     "connect-livereload": "^0.6.1",
     "cookie-parser": "~1.4.4",
     "css-loader": "^6.7.1",
